templates/public-html_template.yaml
---
# Source: public-html/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-public-html-service
  labels:
    helm.sh/chart: public-html-0.1.0
    app.kubernetes.io/name: public-html
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: public-html
    app.kubernetes.io/instance: release-name
---
# Source: public-html/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-public-html
  labels:
    helm.sh/chart: public-html-0.1.0
    app.kubernetes.io/name: public-html
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: public-html
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: public-html
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-public-html
      securityContext:
        {}
      containers:
        - name: public-html
          securityContext:
            {}
          image: "nginx:1.19.0-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
          volumeMounts:
            - name: public-html-data
              mountPath: /usr/share/nginx/html
              subPath: public_html
      volumes:
        - name: public-html-data
          emptyDir: {}
---
# Source: public-html/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-public-html
  labels:
    helm.sh/chart: public-html-0.1.0
    app.kubernetes.io/name: public-html
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /public
            backend:
              serviceName: release-name-public-html-service
              servicePort: 80
---
# Source: public-html/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-public-html-test-connection"
  labels:
    helm.sh/chart: public-html-0.1.0
    app.kubernetes.io/name: public-html
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-public-html:80']
  restartPolicy: Never
